# DarmaTrack

./: .gitignore  package-lock.json  package.json
ai-agent/: analyzer.py  config.py  conftest.py  main.py  pyproject.toml  requirements.txt
backend/: .eslintrc.cjs  package.json  tsconfig.json  vitest.config.ts
backend/src/: index.ts  storage.ts
backend/src/middleware/: auth.ts
backend/src/models/: Analysis.ts  User.ts
backend/src/routes/: analyses.ts  auth.ts  users.ts
backend/src/test/: auth.test.ts  createApp.ts  globalSetup.ts  setup.ts  users.test.ts
frontend/: index.html  package.json  tsconfig.json
frontend/src/: App.tsx  index.css
frontend/src/components/: AnalysisCard.tsx  AnalysisStatusIndicator.tsx  BottomNav.tsx  ImageUploader.tsx  Layout.tsx  PageTransition.tsx  SkinProfileForm.tsx
frontend/src/context/: AnalysisContext.tsx  AuthContext.tsx
frontend/src/hooks/: useAnalysisPoller.ts
frontend/src/pages/: AnalysisResult.tsx  HistoryPage.tsx  HomePage.tsx  LandingPage.tsx  OnboardingFlow.tsx  ProfilePage.tsx
frontend/src/test/: analysisResult.test.tsx  auth.test.tsx  authRedirect.test.tsx  historyPage.test.tsx  onboarding.test.tsx  setup.ts  signout.test.tsx  skinProfileForm.test.tsx
frontend/src/types/: index.ts
frontend/src/utils/: api.ts  imageUrl.ts
